# maloja

./: .dockerignore  .doreah  .gitignore  API.md  APKBUILD  Containerfile  DEVELOPMENT.md  Dockerfile  Dockerfile-dev  Dockerfile-pypi  FUTURE.md  README.md  alpine_install.sh  cleanup.py  compliant_api.py  database.py  dockertest.sh  example-compose.yml  external.py  fixexisting.py  htmlgenerators.py  htmlmodules.py  info.py  install_alpine.sh  install_ubuntu.sh  lastfmconverter.py  maloja  malojatime.py  mediacache  monkey.py  pylintrc  pyproject.toml  requirements.txt  requirements_extra.txt  requirements_pre.txt  restarter.py  server.py  settings.md  setup.py  supervisor.py  (+4 more)
.github/: FUNDING.yml
.github/workflows/: aux.library.pypi.yml  aux.scrobbler.upload.yml  auxil.scrobbler.upload.yml  docker.yml  dockerhub.yml  pypi.yml  pypi_lib.yml
auxiliary/chromium_scrobbler/: .gitignore  update_scrobbler.sh
auxiliary/malojalib/: pyproject.toml
auxiliary/malojalib/malojalib/: __init__.py
clients/: .gitignore  example_file.tsv
dev/: clear_testdata.sh  docker-compose.yml  dockerrun.sh  install_dependencies_alpine.sh  list_tags.sh  run_docker.sh  run_podman.sh  update_dist_files.py  update_files.py  write_tags.py
dev-scripts/: package.py  update_scrobbler.sh
dev/releases/: 1.0.yml  1.1.yml  1.2.yml  1.3.yml  1.4.yml  1.5.yml  2.0.yml  2.1.yml  2.10.yml  2.11.yml  2.12.yml  2.13.yml  2.14.yml  2.2.yml  2.3.yml  2.4.yml  2.5.yml  2.6.yml  2.7.yml  2.8.yml  2.9.yml  3.0.yml  3.1.yml  3.2.yml  branch.yml
dev/templates/: APKBUILD.jinja  Containerfile.jinja  Dockerfile.jinja  install_alpine.sh.jinja  requirements.txt.jinja  requirements_extra.txt.jinja
dev/testing/: Maloja.postman_collection.json  stresstest.py
doreah/: _internal.py  logging.py  persistence.py  settings.py  timing.py  tsv.py
images/: .gitignore  images.info
images/tracks/: .gitignore
info/artists/: .gitignore
info/artists_cache/: .gitignore
install/: alpine_requirements.sh  alpine_requirements_build.sh  alpine_requirements_build_volatile.sh  alpine_requirements_run.sh  dependencies_build.txt  dependencies_run.txt  dependencies_run_opt.txt  install_alpine.sh  install_debian.sh  install_dependencies.sh  install_dependencies_alpine.sh  install_dependencies_arch.sh  install_dependencies_debian.sh
logs/: .gitignore
maloja/: __init__.py  __main__.py  __pkginfo__.py  backup.py  cleanup.py  compliant_api.py  controller.py  database.py  database_packed.py  doreah  external.py  fixexisting.py  globalconf.py  htmlgenerators.py  htmlmodules.py  images.py  info.py  jinja_filters.py  lastfmconverter.py  malojatime.py  malojauri.py  monkey.py  server.py  setup.py  supervisor.py  upgrade.py  urihandler.py  utilities.py
maloja/apis/: __init__.py  _apikeys.py  _base.py  _exceptions.py  audioscrobbler.py  audioscrobbler_legacy.py  legacy_audioscrobber.py  listenbrainz.py  native_v1.py
maloja/data_files/: .doreah
maloja/database/: __init__.py  associated.py  cache.py  cached.py  dbcache.py  exceptions.py  jinjaview.py  sqldb.py
maloja/db/: convert.py  sqldb.py
maloja/dev/: __init__.py  apidebug.py  generate.py  profiler.py
maloja/jinjaenv/: context.py  filters.py
maloja/pkg_global/: conf.py  monkey.py
maloja/proccontrol/: __main__.py  control.py  profiler.py  setup.py  supervisor.py  tasks.py
maloja/utilities/: __init__.py  images.py  maintenance.py  utils.py
maloja/web/: admin.pyhp  artist.html  artist.py  artist.pyhp  charts_artists.html  charts_artists.py  charts_artists.pyhp  charts_tracks.pyhp  compare.py  issues.html  issues.py  manual.html  performance.py  proxy.html  proxy.py  pulse.py  scrobbles.html  scrobbles.py  setup.html  setup.py  start.html  summary.pyhp  top_artists.py  track.html  track.py  track.pyhp  wait.html
maloja/website/: charts_tracks.py  issues.py  performance.html  proxy.html  setup.html  start.py  top_tracks.html  top_tracks.py  track.pyhp
malojalib/: README.md  __pkginfo__.py
rules/: .gitignore  examplerules.csv  examplerules.tsv  rules.info
rules/predefined/: krateng_artistsingroups.tsv  krateng_firefly-soundtrack.tsv  krateng_jeremysoule.tsv  krateng_kpopgirlgroups.tsv  krateng_lotr-soundtrack.tsv  krateng_monstercat.tsv  predefined.info
scrobbler-vivaldi-plex/: background.js  contentScript.js  manifest.json  settings.html  settings.js
scrobblers/: .gitignore
scrobblers/chromium/: background.js  manifest.json  settings.html  settings.js  sitescript.js
scrobblers/chromium-generic/: background.js  manifest.json  settings.html  settings.js  sitescript.js
scrobblers/chromium-plex-unmaintained/: contentScript.js
scrobblers/chromium-youtubemusic/: background.js  settings.html
scrobblers/chromium-youtubemusic-unmaintained/: contentScript.js  manifest.json
scrobbles/: .gitignore
settings/: default.ini
testing/: Maloja.postman_collection.json
website/: .gitignore  admin.pyhp  artist.html  artist.py  artist.pyhp  charts_artists.html  charts_artists.py  charts_tracks.html  charts_tracks.py  chartsartists.html  chartstracks.html  compare.html  compare.py  issues.html  issues.py  maloja.css  manual.html  performance.html  performance.py  proxy.py  pulse.html  pulse.py  scrobbles.html  scrobbles.py  setup.html  setup.py  start.html  start.py  top_artists.html  top_artists.py  top_tracks.py  topartists.html  topartists.py  toptracks.html  toptracks.py  track.html  track.py  track.pyhp  wait.html
(+203 files in other folders)
