[project]
name = "malojaserver"
version = "3.0.4"
description = "Self-hosted music scrobble database"
readme = "./README.md"
requires-python = ">=3.6"
license = { file="./LICENSE" }
authors = [ { name="Johannes Krattenmacher", email="maloja@dev.krateng.ch" } ]

urls.repository = "https://github.com/krateng/maloja"
urls.documentation = "https://github.com/krateng/maloja"
urls.homepage = "https://github.com/krateng/maloja"

keywords = ["scrobbling", "music", "selfhosted", "database", "charts", "statistics"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent"
]

dependencies = [
	"bottle>=0.12.16",
	"waitress>=1.3",
	"doreah>=1.9.1, <2",
	"nimrodel>=0.8.0",
	"setproctitle>=1.1.10",
	#"pyvips>=2.1.16",
	"jinja2>=2.11",
	"lru-dict>=1.1.6",
	"css_html_js_minify>=2.5.5",
	"psutil>=5.8.0",
	"sqlalchemy>=1.4",
	"python-datauri>=1.1.0",
	"requests>=2.27.1"
]

[project.optional-dependencies]
full = [
	"pyvips>=2.1"
]

[project.scripts]
maloja = "maloja.proccontrol.control:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "maloja"

[tool.osreqs.alpine]
build =[
	"gcc",
	"g++",
	"python3-dev",
	"libxml2-dev",
	"libxslt-dev",
	"libffi-dev",
	"libc-dev",
	"py3-pip",
	"linux-headers"
]
run = [
	"python3",
	"tzdata"
]
opt = [
	"vips"
]

[tool.osreqs.debian]
build = [
	"python3-pip"
]
run = [
	"python3"
]
opt = []
