[project]
name = "malojaserver"
version = "3.2.4"
description = "Self-hosted music scrobble database"
readme = "README.md"
requires-python = "==3.12.*"
license = { file="LICENSE" }
authors = [ { name="Johannes Krattenmacher", email="maloja@dev.krateng.ch" } ]

urls.repository = "https://github.com/krateng/maloja"
urls.documentation = "https://github.com/krateng/maloja"
urls.homepage = "https://github.com/krateng/maloja"

keywords = ["scrobbling", "music", "selfhosted", "database", "charts", "statistics"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent"
]

dependencies = [
	"bottle==0.13.*",
	"waitress==3.0.*",
	"doreah==2.0.*",
	"nimrodel==0.8.*",
	"setproctitle==1.3.*",
	"jinja2==3.1.*",
	"lru-dict==1.3.*",
	"psutil==5.9.*",
	"sqlalchemy==2.0",
	"python-datauri==3.0.*",
	"python-magic==0.4.*",
	"requests==2.32.*",
	"toml==0.10.*",
	"PyYAML==6.0.*"
]

[project.optional-dependencies]
full = [
	"pyvips==2.2.*"
]

[project.scripts]
maloja = "maloja.__main__:main"

[build-system]
requires = ["flit_core >=3.10,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "maloja"

[tool.osreqs.alpine]
build =[
	"gcc",
	"g++",
	"python3-dev",
	"libxml2-dev",
	"libxslt-dev",
	"libffi-dev",
	"libc-dev",
	"py3-pip",
	"linux-headers"
]
run = [
	"python3",
	"py3-lxml",
	"tzdata",
	"libmagic"
]
opt = [
	"vips"
]

[tool.osreqs.debian]
build = [
	"python3-pip"
]
run = [
	"python3"
]
opt = []
